# mp-in-haskell

./: LICENSE  README.md  circle.yml  mp-in-haskell.cabal
.circleci/: config.yml
app/: Main.hs
src/MP/: Dist.hs  RPNCalculator.hs
test/MP/: DistSpec.hs  RPNCalculatorSpec.hs
