name:                mp-in-haskell
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/lagenorhynque/mp-in-haskell#readme
license:             BSD3
license-file:        LICENSE
author:              Kent OHASHI
maintainer:          ignorantia.juris.non.excusa@gmail.com
copyright:           2016 Kent OHASHI
category:            Development
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     MP.Dist
                     , MP.RPNCalculator
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable mp-in-haskell-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , mp-in-haskell
  default-language:    Haskell2010

test-suite mp-in-haskell-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       MP.RPNCalculatorSpec
  build-depends:       base
                     , hspec >= 2.4.3
                     , mp-in-haskell
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/lagenorhynque/mp-in-haskell
